Add Reports to coverage, and add new api swagger documentation
